--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
-    "next": "15.4.5",
+    "next": "^16.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1",
